--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -14,6 +14,9 @@ header {
   padding: 3%;
   color: #1e0955;
 }
+#Home{
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
 /* タイトル */
 #title {
   font-weight: bold;
@@ -28,7 +31,6 @@ header {
 
 #sbutitleHome {
   color: #e2daf8;
-
 }
 
 /* メニューバー */
@@ -100,10 +102,11 @@ footer p {
   flex-wrap: wrap;
   justify-content: center;
 }
+
 /* index用カード定義 */
 .cardHome {
   background: #fff;
-  width: 400px;
+  width: 360px;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.21);
@@ -117,12 +120,14 @@ footer p {
   transition-duration: .4s;
   z-index: 2;
 }
+
 /* 背景色が暗い場所向けに文字色を調整する */
 @media (prefers-color-scheme: dark) {
   .cardHome {
     color: #333;
   }
 }
+
 /* ホバーしたら紫色になる */
 .cardHome::after {
   background-color: rgba(30, 9, 85, 0.75);
@@ -144,32 +149,41 @@ footer p {
   transition: opacity .5s, transform 0s;
   transition-delay: 0s, .4s;
 }
+
 .cardHome:hover {
-  transform: scale(1.1); /* ホバー時に1.1倍のサイズに拡大 */
+  transform: scale(1.1);
+  /* ホバー時に1.1倍のサイズに拡大 */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   transition: all 0.25s ease;
-  color:#b7a2ee;
+  color: #b7a2ee;
 }
+
 .cardHome:hover::after {
   opacity: 1;
   transform: translateY(-50%) scale(1.1);
   transition-delay: 0s;
   transition: opacity .8s, transform .6s ease-in-out;
 }
-.cardHome h2{
+
+.cardHome h2 {
   color: #e2daf8;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
-.homeImg{
-  opacity: 0.9; /* 不透明度を90%に設定 */
+
+.homeImg {
+  opacity: 0.9;
+  /* 不透明度を90%に設定 */
 }
-.homeLink{
+
+.homeLink {
   color: #b7a2ee;
 }
-.homeLink:hover{
+
+.homeLink:hover {
   color: #e2daf8;
   background-color: rgba(30, 9, 85, 0.0);
 }
+
 /* ページ概要用カード定義 */
 .cardDescription {
   width: 880px;
@@ -180,6 +194,7 @@ footer p {
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: none;
 }
+
 /* 作品概要用カード定義 */
 .cardComment {
   width: 600px;
@@ -191,6 +206,7 @@ footer p {
   position: relative;
   /*下固定用*/
 }
+
 /* 動画用カード定義 */
 .cardVideo {
   width: 600px;
@@ -201,6 +217,7 @@ footer p {
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: none;
 }
+
 /* 画像用カード定義 */
 .cardImg {
   width: 600px;
@@ -211,6 +228,7 @@ footer p {
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: none;
 }
+
 /* 四角用カード定義 */
 .cardSquare {
   width: 600px;
@@ -221,6 +239,7 @@ footer p {
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: none;
 }
+
 /* Figma用カード定義 */
 .cardFigma {
   width: 600px;
@@ -231,6 +250,7 @@ footer p {
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border: none;
 }
+
 /* XD用カード定義 */
 .cardXD {
   width: 600px;
@@ -245,23 +265,61 @@ footer p {
 /* カードテキスト定義 */
 /* タイトル */
 .Title {}
+
 /* 作成時期 */
 .Dialog {}
+
 /* 概要 */
 .Description {}
+
 /* 使用ソフト */
 .Use {
   position: absolute;
   bottom: 0;
   font-size: 75%;
 }
-.imgLink:hover{
+
+.imgLink:hover {
   background-color: rgba(0, 0, 0, 0);
 }
-h2{
+
+h2 {
   font-weight: 600;
 }
+/* ホームのリスト */
+.glass-background {
+  margin-top: 200px;
+  width: 75%;
+  padding: 20px;
+  background-color: rgba(30, 9, 85, 0.8); /* 半透明の背景色 */
+  border-radius: 8px; /* 角丸 */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* グラスモーフィズムデザインの影 */
+}
+.glass-background p{
+  text-align: center;
+  color: #e2daf8;
+}
+.glass-background h3{
+  text-align: center;
+  color: #e2daf8;
+}
+.glass-background h4{
+  text-align: center;
+  color: #e2daf8;
+  font-size: 105%;
+}
+.centered-table {
+  border-collapse: collapse;
+  border: none;
+  margin: 0 auto;
+  background-color: transparent;
+}
 
+.centered-table td {
+  border: none;
+  padding: 10px;
+  color: #e2daf8;
+}
 /* YouTube動画定義 */
 iframe {
   width: 100%;
@@ -377,6 +435,7 @@ a:hover {
     transform: translateY(100px);
   }
 }
+
 /* 小メニュー */
 .menu-container {
   position: fixed;
@@ -410,7 +469,8 @@ a:hover {
   opacity: 0;
   transform: translateY(-10px);
   transition: opacity 0.3s, transform 0.3s;
-  text-align: center; /* テキストを中央寄せにする */
+  text-align: center;
+  /* テキストを中央寄せにする */
 }
 
 .menu-container:hover .hover-menu {
@@ -441,6 +501,7 @@ a:hover {
   color: rgba(226, 218, 248, 0.75);
   transition: all 0.25s ease;
 }
+
 .hover-menu li a:hover {
   color: rgba(226, 218, 248, 0.75);
   transition: all 0.25s ease;
@@ -456,7 +517,6 @@ a:hover {
   left: 0;
   bottom: 0;
   overflow: hidden;
-  filter: blur(2px);
 }
 
 #video {
@@ -473,6 +533,7 @@ a:hover {
   /* 16:9の幅 → 9 ÷ 16 = 56.25% */
   min-height: 105%;
   min-width: 105%;
+  filter: blur(4px);
 }
 
 /*       <!--
