--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -517,6 +517,7 @@ a:hover {
   left: 0;
   bottom: 0;
   overflow: hidden;
+  background-color: #1e0955;
 }
 
 #video {
@@ -534,6 +535,7 @@ a:hover {
   min-height: 105%;
   min-width: 105%;
   filter: blur(4px);
+  opacity: 0.5; /* 透明度を設定（0.0から1.0の範囲で指定） */
 }
 
 /*       <!--
