--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -106,6 +106,11 @@ footer p {
 }
 
 /* index用カード定義 */
+.card-container-home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .cardHome {
   background: #fff;
   width: 360px;
